--- a/app/src/main/res/layout-v21/toolbar.xml
+++ b/app/src/main/res/layout-v21/toolbar.xml
@@ -5,6 +5,7 @@
     android:theme="@style/Toolbar"
     android:layout_height="?attr/actionBarSize"
     android:layout_width="match_parent"
+    android:elevation="4dp"
     android:background="?attr/colorPrimary"
     app:layout_collapseMode="pin"
     app:popupTheme="@style/AppTheme.PopupOverlay">
