--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -1,5 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="12dp">
 
+    <ImageView
+        android:id="@+id/artwork_small"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        app:srcCompat="@mipmap/ic_launcher"
+        android:layout_marginEnd="12dp"
+        android:layout_marginRight="12dp"
+        android:scaleType="centerCrop"
+        />
+    <TextView
+        android:id="@+id/album_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/artwork_small"
+        android:layout_toRightOf="@+id/artwork_small"
+        android:layout_marginBottom="5dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginRight="12dp"
+        style="@style/Text.Subtitle.List"
+        />
+
+    <TextView
+        android:id="@+id/artist_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/album_label"
+        android:layout_toEndOf="@+id/artwork_small"
+        android:layout_toRightOf="@+id/artwork_small"
+        android:layout_marginBottom="5dp"
+        style="@style/Text.Body"
+        />
+
+    <TextView
+        android:id="@+id/release_date_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/artist_label"
+        android:layout_toEndOf="@+id/artwork_small"
+        android:layout_toRightOf="@+id/artwork_small"
+        style="@style/Text.Body"
+        />
 </RelativeLayout>
